--- a/frontend/public/login.html
+++ b/frontend/public/login.html
@@ -19,5 +19,6 @@
         <button type="button"><a href="./register.html">Registrar</a></button>
         <button type="button"><a href="./index.html">Voltar</a></button>
     </form>
+<button type="button" class="recover-password"><a href="./recover-password.html">Recuperar Senha</a></button>
 </body>
 </html>
